P1: the collapsing tab rail, History, and three bugs the live data found
The detail pane's tab strip is now a vertical icon rail (user request 2026-08-17). Collapsed it is a
40px spine; hover overlays it at 190px so nothing reflows under the text you are reading;
double-click pins it, which takes its own column and persists across records, projects and reloads.
A strip could not do this job — the tab count is per-project (nine memo fields here alone, plus
Details, Risk Analysis, History, All fields and one per relation) and it wrapped to three rows.

Tabs are blued when they hold something, as ALM's own dialog does. `GET /api/tabs/{c}/{id}` answers
that in one request. ⚠️ A tab whose probe FAILS is absent from the map rather than reported empty:
"empty" and "we could not tell" look identical to a reader and only one of them is a claim we can
support.

History (Audit Log) is in, from probe 24. Baselines are not, and cannot be — they are OTA-only
(probe 12), so the panel says so rather than showing a sub-tab that is permanently empty for an
invisible reason. The empty state is the careful one: probe 24 read 678 audit entries across 119
records of a live project and every single one was an UPDATE — no creates, no deletes, no memo
edits, 12 distinct fields in total. "No recorded changes" is not "nothing happened".

⚠️ The audits payload collapses single elements to bare objects, and this is the COMMON case, not an
edge case: `Property` was an object 464 times against 129 arrays, `Audit` an object in 4 of 119
records, and `Properties` was absent entirely 85 times. A parser written from one pretty sample
would have passed review and thrown on most real records. The fixtures are hand-built from the
measured shape — real audit rows are another team's edits and never enter this repo.

Fixed, all three found by looking at live rows rather than by reasoning:

- Gap 0e, the project-switch race. The old project's prefetch resolved AFTER the reset and marked
  the NEW project's i